--- a/Ellielog.Rmd
+++ b/Ellielog.Rmd
@@ -1,20 +1,62 @@
 Ellie's Log
 ========================================================
 My daughter, ellie, was born in January. Since her birth, we have been keeping detailed records of her sleep, feeding and diapers. In honor of QS2012, I digitized our log and have put together some plots of the key variables that we measured. I would love ideas and feedback on where to go next. 
+
+changes made as a test. 
+
 <a href="http://imgur.com/4OQqA"><img src="http://i.imgur.com/4OQqA.jpg" title="Hosted by imgur.com" alt="" width="200" /></a>
 
 ```{r setup, results='hide', warning=FALSE}
-setwd("~/Desktop/Dropbox/EllieLog/")
+#setwd("~/Desktop/Dropbox/EllieLog/")
 require(ggplot2)
 require(reshape2)
 
-Ellielog = read.csv("Ellielog.csv")
-dates = seq(from=as.Date("2012-01-19"), to=as.Date("2012-09-11"), by="day")
+# read in log data
+Ellielog = read.csv("Ellielog2.csv")
+
+# reformat dates
+dates = seq(from=as.Date("2012-01-19"), to=as.Date("2012-10-18"), by="day")
 Ellielog$Date=dates
-Ellielog$nightSleep[80] = 9.75
-Ellielog$daySleep[37] = 4.25
-Ellielog$daySleep[38] = 4.25
-tmp = melt(Ellielog, id.vars="Date")
+
+# create age in days variate
+Ellielog$age = as.numeric(Ellielog$Date-Ellielog$Date[1])
+
+# read in weight data
+EllieWeight = read.csv("ellieWeight.csv")
+names(EllieWeight)[1] = "Date"
+EllieWeight$Date = as.Date(EllieWeight$Date)
+
+# merge weight data into log
+Ellielog = merge(Ellielog, EllieWeight[,c(1,4)], all.x=TRUE, all.y=TRUE)
+
+# manual additions of weigh ins excluded from chart
+Ellielog$weight.lb[1]=7.5
+Ellielog$weight.lb[2]=7
+Ellielog$weight.lb[3]=6.75
+Ellielog$weight.lb[4]=6.9375
+Ellielog$weight.lb[5]=6.9375
+Ellielog$weight.lb[8]=7+5/16
+Ellielog$weight.lb[16]=7+15.5/16
+
+# getting the 50th perctile for weight from CDC equations
+cdcCoefs = c(3.23249, .764466, -.0115107, -.000912367)
+cdc50 = function(coef,age.in.days){
+  ageM = age.in.days/30.4368
+  weight.kg = coef[1] + coef[2]*ageM + coef[3]*ageM^2 + coef[4]*ageM^3
+  weight.lb = weight.kg * 2.2
+  return(weight.lb)
+  }
+Ellielog$percentile50 = cdc50(cdcCoefs, 1:dim(Ellielog)[1])
+
+# create the melted Ellielog
+Ellielog.melt = melt(Ellielog, id.vars="Date")
+```
+## Weight
+```{r fig.width=8, fig.height=6, results='hide', warning=FALSE}
+qplot(Date, value, data=subset(Ellielog.melt, variable %in% c("weight.lb", "percentile50")), color=variable) + labs(y="pounds", color="")+ scale_color_hue(h.start=180)
+```
+```{r fig.width=8, fig.height=6, results='hide', warning=FALSE}
+qplot(Date, value, data=subset(Ellielog.melt, variable %in% c("weight.lb", "percentile50")&Date<Ellielog$Date[100]), color=variable, main="zoom in on first 100 days") + annotate("segment", y=-Inf, yend=Inf, x=15422, xend=15422, color="limegreen", lty=2) + labs(y="pounds", color="") + scale_color_hue(h.start=180) + annotate("text", x=15432, y=8.25, label="start meds", color="limegreen")
 ```
 ## Sleep
 ```{r fig.width=8, fig.height=6, results='hide', warning=FALSE}
@@ -36,16 +78,25 @@ qplot(Date, naps, data=Ellielog, geom=c("point", "smooth"), main = "Number of na
 ```{r fig.width=8, fig.height=6, results='hide', warning=FALSE}
 qplot(Date, longestNap, data=Ellielog, geom=c("point", "smooth"), main="Longest Nap (hours)")
 ```
-
+```{r fig.width=8, fig.height=6, results='hide', warning=FALSE}
+qplot(nightSleep, daySleep, data=Ellielog, color=age) + annotate("segment", x=7, y=7.5, xend=12, yend=2.5, lty=2)+scale_color_gradient(low="pink", high="red")+annotate("text", x=7.50, y=7.45, label="14.5 hour line", srt=338) + labs(color="age in days")
+```
+```{r fig.width=8, fig.height=6, results='hide', warning=FALSE}
+qplot(Date, nightWakings, data=Ellielog, geom=c("point", "smooth"))
+```
 ## Diapers
 ```{r fig.width=8, fig.height=6, results='hide', warning=FALSE}
 qplot(Date, P, data=Ellielog, geom=c("point", "smooth"), main="Number of poop diapers")
 ```
 
 ## Feedings
+```{r fig.width=8, fig.height=6, results='hide', warning=FALSE}
+qplot(Date, longestBF, data=Ellielog, geom=c("point", "smooth"), main="Longest Breastfeeding (minutes)")
+```
 
 ```{r fig.width=8, fig.height=6, results='hide', warning=FALSE}
-qplot(Date, feedings, data=Ellielog, geom=c("point", "smooth"), main="Number of feedings")
+Ellielog$longestBF[-c(1:88)] = 10
+qplot(Date, feedings, data=Ellielog, geom=c("point", "smooth"), main="Number of feedings", size=longestBF)
 ```
 ```{r fig.width=8, fig.height=6, results='hide', warning=FALSE}
 qplot(Date, bottles, data=Ellielog, geom=c("point", "smooth"), main="Number of bottle feedings")
@@ -56,5 +107,10 @@ qplot(Date, longestBF, data=Ellielog, geom=c("point", "smooth"), main="Longest B
 ```{r fig.width=8, fig.height=6, results='hide', warning=FALSE}
 qplot(Date, solids, data=Ellielog, geom=c("point", "smooth"), main="Number of solids feedings")
 ```
+## Teething
+```{r fig.width=8, fig.height=6, results='hide', warning=FALSE}
+qplot(Date, painkiller, data=Ellielog[-c(1:200),], geom=c("point", "line"))
+```
+
 
 <a href="http://imgur.com/bFLFG"><img src="http://i.imgur.com/bFLFG.jpg" title="Hosted by imgur.com" alt="" width="200" /></a>
